--- a/dapp/Dockerfile
+++ b/dapp/Dockerfile
@@ -14,7 +14,8 @@ RUN <<EOF
 set -e
 apt-get update
 apt-get install -y --no-install-recommends \
-  busybox-static=1:1.30.1-7ubuntu3
+  busybox-static=1:1.30.1-7ubuntu3 \
+  libsqlite3-dev
 rm -rf /var/lib/apt/lists/* /var/log/* /var/cache/*
 useradd --create-home --user-group dapp
 EOF
@@ -30,7 +31,9 @@ pip install -r requirements.txt --no-cache
 find /usr/local/lib -type d -name __pycache__ -exec rm -r {} +
 EOF
 
-COPY ./dapp.py .
+COPY ./*.py .
+RUN touch banco.db
+RUN chmod +w banco.db
 
 ENV ROLLUP_HTTP_SERVER_URL="http://127.0.0.1:5004"
 
