mudando owner do diretorio ao buildar

--- a/dapp/Dockerfile
+++ b/dapp/Dockerfile
@@ -35,6 +35,7 @@ EOF
 COPY ./*.py .
 
 RUN python db_manager.py
+RUN chown -R dapp:dapp /opt/cartesi/dapp
 
 ENV ROLLUP_HTTP_SERVER_URL="http://127.0.0.1:5004"
 
