--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "antd": "^5.23.0",
     "axios": "^1.7.9",
     "chart.js": "^4.4.7",
     "ethers": "^6.13.4",
