update do readme e limpando mais um pouco os codigos

--- a/dapp/0x69e4abc7be7b440cfc77e63bec223b640f2b28a9ce0af04542f95eb828bd7286.env
+++ b/dapp/0x69e4abc7be7b440cfc77e63bec223b640f2b28a9ce0af04542f95eb828bd7286.env
@@ -25,4 +25,4 @@ CARTESI_BLOCKCHAIN_WS_ENDPOINT=wss://eth-sepolia.g.alchemy.com/v2/FJ7ZicZFKOFpDM
 
 # banco de dados SQL que é utilizado pelo cartesi node
 # $ docker run --name some-postgres -e POSTGRES_PASSWORD=mysecretpassword -d postgres
-CARTESI_POSTGRES_ENDPOINT=postgres://postgres:mysecretpassword@host.docker.internal:5432/postgres
+CARTESI_POSTGRES_ENDPOINT=postgres://some-postgres:mysecretpassword@host.docker.internal:5432/postgres
