--- a/dapp/0x70aaf0ca43414eee87991f5bc3b1773d629b364f61c5d6d4fde1d3a7e0b1c09d.env
+++ b/dapp/0x70aaf0ca43414eee87991f5bc3b1773d629b364f61c5d6d4fde1d3a7e0b1c09d.env
@@ -4,12 +4,12 @@ CARTESI_BLOCKCHAIN_FINALITY_OFFSET=1
 CARTESI_BLOCKCHAIN_ID=11155111
 
 # contrato do DApp
-CARTESI_CONTRACTS_APPLICATION_ADDRESS=0x3c62bC6eFf805474b2b292c57D8fdCEA74681C3c
-CARTESI_CONTRACTS_APPLICATION_DEPLOYMENT_BLOCK_NUMBER=7534071
+CARTESI_CONTRACTS_APPLICATION_ADDRESS=0xE69137a73b6F7EA3bdBAf3FbDBE4601a27575B9b
+CARTESI_CONTRACTS_APPLICATION_DEPLOYMENT_BLOCK_NUMBER=7577794
 
 
-CARTESI_CONTRACTS_AUTHORITY_ADDRESS=0x9a09929E7165eEF738976a1054be834B8E67BE13
-CARTESI_CONTRACTS_HISTORY_ADDRESS=0x0c9073b37EB991FB507c7cab0fc2e771D1B6c67F
+CARTESI_CONTRACTS_AUTHORITY_ADDRESS=0xfBc8D405BAad28662390E5b0DD69AE5C7DDFa174
+CARTESI_CONTRACTS_HISTORY_ADDRESS=0x452F0c1Ad30e2835B2Cd8677E30fB51149fb5A18
 CARTESI_CONTRACTS_INPUT_BOX_ADDRESS=0x59b22D57D4f067708AB0c00552767405926dc768
 CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER=3963384
 
@@ -17,7 +17,7 @@ CARTESI_CONTRACTS_INPUT_BOX_DEPLOYMENT_BLOCK_NUMBER=3963384
 CARTESI_EPOCH_DURATION=86400
 
 # mnemonic carteira do nó validador
-CARTESI_AUTH_MNEMONIC="song social diamond human coral future crane clay action unit inch stage"
+CARTESI_AUTH_MNEMONIC=song social diamond human coral future crane clay action unit inch stage
 
 # RPC Node (nó layer-1)
 CARTESI_BLOCKCHAIN_HTTP_ENDPOINT=https://eth-sepolia.g.alchemy.com/v2/FJ7ZicZFKOFpDMTAiYjyLV-9t-lVjsa7
@@ -25,4 +25,5 @@ CARTESI_BLOCKCHAIN_WS_ENDPOINT=wss://eth-sepolia.g.alchemy.com/v2/FJ7ZicZFKOFpDM
 
 # banco de dados SQL que é utilizado pelo cartesi node
 # $ docker run --name some-postgres -e POSTGRES_PASSWORD=mysecretpassword -d postgres
-CARTESI_POSTGRES_ENDPOINT=postgres://some-postgres:mysecretpassword@host.docker.internal:5432/postgres
+# CARTESI_POSTGRES_ENDPOINT=postgres://some-postgres:mysecretpassword@host.docker.internal:5432/postgres
+CARTESI_POSTGRES_ENDPOINT=postgres://postgres:mysecretpassword@localhost:15432/postgres
